--- a/src/Security/Views/UserManagementView.razor
+++ b/src/Security/Views/UserManagementView.razor
@@ -1,4 +1,4 @@
-﻿@inject RoleGroupManager _roleGroupManager
+﻿@inject BlazorAuthenticationStateProvider _blazorAuthenticationStateProvider
 @using Microsoft.AspNetCore.Components.Forms
 @namespace Security
 
@@ -76,7 +76,7 @@
                     <label>Group</label>
                     <select class="form-select" aria-label="Default select example" @bind="@_model.Group">
                         <option selected>Choose group</option>
-                        @foreach (var group in _roleGroupManager.GetAllGroup())
+                        @foreach (var group in _blazorAuthenticationStateProvider.roleGroupManager.GetAllGroup())
                         {
                             <option value="@group.Name">@group.Name</option>
                         }
