Security refactoring - AppIdentity

--- a/src/BlazorAuthApp/Pages/Index.razor
+++ b/src/BlazorAuthApp/Pages/Index.razor
@@ -4,6 +4,10 @@
 
 <h1>Hello, world!</h1>
 
+<AuthorizeView>
+    <h1>@context.User.Identity.Name</h1>
+</AuthorizeView>
+
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
