--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/DocuExamples.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/DocuExamples.razor
@@ -24,5 +24,10 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> AxoDataExamplesDocu
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="AxoMessagingStaticDocu">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoMessagingStaticDocu
+            </NavLink>
+        </div>
     </nav>
 </div>
