--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
@@ -56,7 +56,7 @@ else
                     <CascadingValue Value="this" IsFixed>
                         @ChildContent
                     </CascadingValue>
-                    @foreach (AxoColumnData column in Columns)
+                    @foreach (ColumnData column in Columns)
                     {
                         if (column.HeaderName is null || column.HeaderName == "")
                         {
@@ -105,7 +105,7 @@ else
                             {
                                 <td data-bs-toggle="modal" href="#viewModal-@ViewGuid" style="cursor: pointer" @onclick="() => Vm.SelectedRecord = item">@item.DataEntityId</td>
 
-                                @foreach (AxoColumnData column in Columns)
+                                @foreach (ColumnData column in Columns)
                                 {
                                     if (column.Clickable)
                                     {
@@ -121,7 +121,7 @@ else
                             {
                                 <td style="cursor: pointer" @onclick="() => Vm.SelectedRecord = item">@item.DataEntityId</td>
 
-                                @foreach (AxoColumnData column in Columns)
+                                @foreach (ColumnData column in Columns)
                                 {
                                     if (column.Clickable)
                                     {
