--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoData/AxoDataRemote.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoData/AxoDataRemote.razor
@@ -24,5 +24,5 @@
     </li>
 </ul>
 @code {
-    private AxoDataExchangeViewModel _vm = new AxoDataExchangeViewModel { Model = Entry.Plc.Integrations.DM };
+    private DataExchangeViewModel _vm = new DataExchangeViewModel { Model = Entry.Plc.Integrations.DM };
 }
