--- a/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
@@ -4,11 +4,14 @@
 
 <div class="container-fluid">
     <div class="row">
-        <AxoDataExchangeView Vm="_vm"></AxoDataExchangeView>
+        <DataExchangeView Vm="_vm">
+            <AxoColumnData HeaderName="Comes from" BindingValue="ComesFrom" Clickable="false" />
+            <AxoColumnData HeaderName="Goes to" BindingValue="GoesTo" Clickable="false" />
+        </DataExchangeView>
     </div>
 </div>
 
 @code
 {
-    private AxoDataExchangeViewModel _vm = new AxoDataExchangeViewModel { Model = Entry.Plc.Context.ProcessData };
+    private DataExchangeViewModel _vm = new DataExchangeViewModel { Model = Entry.Plc.Context.ProcessData };
 }
