fixes axodata documentaion to reflect changes

--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoData/AxoDataRemote.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoData/AxoDataRemote.razor
@@ -3,7 +3,7 @@
 <h3>AxoDataRemote</h3>
 
 @*<RenderableContentControl Context="Entry.Plc.MainContext.process_data_manager_remote_exec" Presentation="Command-Control"></RenderableContentControl>*@
-<AxoDataExchangeView Vm="@_vm"/>
+<DataExchangeView Vm="@_vm"/>
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
