--- a/src/templates.simple/axosimple.app/Components/UnitsData.razor
+++ b/src/templates.simple/axosimple.app/Components/UnitsData.razor
@@ -10,7 +10,7 @@
     </div>
     <div class="card-body">
         <RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData.Shared.Set" Presentation="Display" />
-        <RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData.Data.Set" Presentation="Display"/>
+        <RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData.DataManger.Set" Presentation="Display"/>
     </div>
 </div>
 
