--- a/src/security/src/AXOpen.Security/Views/Login.razor
+++ b/src/security/src/AXOpen.Security/Views/Login.razor
@@ -53,5 +53,8 @@
     protected override void OnInitialized()
     {
         _model = new LoginUserModel();
+        //_blazorAuthenticationStateProvider.OnDeAuthenticated += LogoutTimerExpired;
+
     }
+   
 }
