--- a/src/security/integrations/BlazorAuthApp/Pages/Index.razor
+++ b/src/security/integrations/BlazorAuthApp/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
-
+@inject BlazorAuthenticationStateProvider _basp
+@inject NavigationManager _navigationManager
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
@@ -11,3 +12,19 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+@code{
+
+    //protected override void OnAfterRender(bool firstRender)
+    //{
+    //    //_model = new LoginUserModel();
+    //    _basp.OnDeAuthenticated += LogoutTimerExpired;
+
+    //}
+
+    //void LogoutTimerExpired(string name)
+    //{
+    //    _navigationManager.NavigateTo("", forceLoad: true);
+    //}
+
+}
