--- a/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
@@ -1,10 +1,24 @@
 ﻿@page "/ui/ProcessData"
 @using AXSharp.Connector
 @using AXOpen.Data;
-@using AXOpen.Data.ViewModels
 
-<div class="container-fluid">
+@*<div class="container-fluid">
     <div class="row">
-        <RenderableContentControl Context="@Entry.Plc.Context.ProductionSettings" Presentation="Command"></RenderableContentControl>
+        <DataExchangeView Vm="_vm">
+            <AxoColumnData HeaderName="Comes from" BindingValue="ComesFrom" Clickable="false" />
+            <AxoColumnData HeaderName="Goes to" BindingValue="GoesTo" Clickable="false" />
+        </DataExchangeView>
     </div>
 </div>
+
+@code
+{
+    private DataExchangeViewModel _vm = new DataExchangeViewModel { Model = Entry.Plc.Context.ProcessData };
+}
+*@
+
+<RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData.DataManger" Presentation="Command"></RenderableContentControl>
+
+@*<RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData.Shared" Presentation="Command"></RenderableContentControl>
+
+<RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData.Data" Presentation="Command"></RenderableContentControl>*@
