--- a/src/security/src/axopen_security_blazod/Views/UserCreateDetailView.razor
+++ b/src/security/src/axopen_security_blazod/Views/UserCreateDetailView.razor
@@ -1,11 +1,14 @@
 ﻿@page "/Identity/Account/Register"
-@inject SignInManager<User> SignInManager
-@inject NavigationManager _navigationManager
-@inject UserManager<User> UserManager
-@namespace AxOpen.Security.Blazor.Views
+@namespace AxOpen.Security.Views
 @using AxOpen.Security.Entities;
 @using AxOpen.Security.Models;
-@using AxOpen.Security.Views;
+@using AxOpen.Security.Services;
+@using Microsoft.AspNetCore.Components.Authorization;
+@using Microsoft.AspNetCore.Identity;
+@using Microsoft.AspNetCore.Components.Forms;
+@inject IRepositoryService _repositoryService
+@inject UserManager<User> _userManager
+@inject NavigationManager _navigationManager
 
 <AuthorizeView Roles="Administrator">
     <Authorized Context="Auth">
@@ -25,70 +28,67 @@
                         <ValidationMessage For="@(() => _model.Password)" />
                     </div>
                     <div class="form-group">
-                        <label>Email</label>
-                        <InputText @bind-Value="_model.Email" class="form-control" />
-
+                        <label>Confirm Password</label>
+                        <InputText @bind-Value="_model.ConfirmPassword" type="password" class="form-control" />
+                        <ValidationMessage For="@(() => _model.ConfirmPassword)" />
                     </div>
                     <div class="form-group">
-                        <label>CanUserChangePassword</label>
-                        <InputCheckbox @bind-Value="_model.CanUserChangePassword" class="form-check " />
-
+                        <label>Email</label>
+                        <InputText @bind-Value="_model.Email" type="email" class="form-control" />
+                        <ValidationMessage For="@(() => _model.Email)" />
                     </div>
-
-                    <button class="btn btn-primary">
-                        Create
-                    </button>
-
+                    <div class="form-check form-switch">
+                        <InputCheckbox @bind-Value="_model.CanUserChangePassword" class="form-check-input" id="checkBoxCanUserChangePassword" />
+                        <label class="form-check-label" for="checkBoxCanUserChangePassword">CanUserChangePassword</label>
+                    </div>
+                    <div class="form-group">
+                        <label>Group</label>
+                        <select class="form-select" aria-label="Default select example" @bind="@_model.Group">
+                            <option selected>Choose group</option>
+                            @foreach (var group in _repositoryService.RoleInAppRepository.GetAllGroup())
+                            {
+                                <option value="@group.Name">@group.Name</option>
+                            }
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-primary" id="test">Create</button>
                 </EditForm>
-                @if (UserCreated)
-                {
-                    <h4 style="color:green">User succesfully created!</h4>
-                }
             </div>
         </div>
-        </Authorized>
+    </Authorized>
     <NotAuthorized>
         <p>Sorry, you are not authorized to create new users. Please log in as administrator.</p>
     </NotAuthorized>
 </AuthorizeView>
 
-
-
-
 @code {
-
     private RegisterUserModel _model { get; set; }
     private User _user { get; set; }
-    private bool UserCreated { get; set; }
-    [CascadingParameter]
-    public UserManagementView _Parent { get; set; }
 
     private async void OnValidSubmit()
     {
+        _user = new User(_model.Username, _model.Email, _model.Group, _model.CanUserChangePassword);
 
-        _user = new User(_model.Username, _model.Email, null, _model.CanUserChangePassword);
+        _user.SecurityStamp = Guid.NewGuid().ToString();
+        //_user.PasswordHash = Hasher.CalculateHash(_model.Password, _model.Username);
+        //_user.RoleHash = Hasher.CalculateHash(_model.Group, _model.Username);
 
+        var result = await _userManager.CreateAsync(_user, _model.Password);
 
-        var result = await UserManager.CreateAsync(_user, _model.Password);
-      
         if (result.Succeeded)
         {
-            UserCreated = true;
-
+            _navigationManager.NavigateTo("");
+            //WeakReferenceMessenger.Default.Send(new ToastMessage(new Toast("Success", "Created!", "User successfully created.", 10)));
+            //TcoAppDomain.Current.Logger.Information($"New user '{_model.Username}' created. {{@sender}}", new { UserName = _model.Username, Group = _model.Group });
         }
         else
         {
-            _navigationManager.NavigateTo("/");
+            //WeakReferenceMessenger.Default.Send(new ToastMessage(new Toast("Warning", "Not created!", "User was not created.", 10)));
         }
-
-
-
-
     }
 
     protected override void OnInitialized()
     {
-        UserCreated = false;
         _model = new RegisterUserModel();
     }
 }
