--- a/src/security/integrations/axopen_blazor_auth_app/Shared/MainLayout.razor
+++ b/src/security/integrations/axopen_blazor_auth_app/Shared/MainLayout.razor
@@ -9,8 +9,7 @@
 
     <main>
         <div class="top-row px-4 auth">
-            <LoginDisplay />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <axopen_security_blazor.Views.LoginDisplay />
         </div>
 
         <article class="content px-4">
