--- a/src/security/src/axopen_security_blazod/Views/UserManagementView.razor
+++ b/src/security/src/axopen_security_blazod/Views/UserManagementView.razor
@@ -78,7 +78,7 @@
                     <label>Group</label>
                     <select class="form-select" aria-label="Default select example" @bind="@_model.Group">
                         <option selected>Choose group</option>
-                        @foreach (var group in _repositoryService.RoleInAppRepository.GetAllGroup())
+                        @foreach (var group in _repositoryService.RoleGroupManager.GetAllGroup())
                         {
                             <option value="@group.Name">@group.Name</option>
                         }
