--- a/src/security/src/axopen_security_blazod/Views/UserCreateDetailView.razor
+++ b/src/security/src/axopen_security_blazod/Views/UserCreateDetailView.razor
@@ -40,16 +40,19 @@
                     <div class="form-check form-switch">
                         <InputCheckbox @bind-Value="_model.CanUserChangePassword" class="form-check-input" id="checkBoxCanUserChangePassword" />
                         <label class="form-check-label" for="checkBoxCanUserChangePassword">CanUserChangePassword</label>
+                        <ValidationMessage For="@(() => _model.CanUserChangePassword)" />
                     </div>
                     <div class="form-group">
                         <label>Group</label>
                         <select class="form-select" aria-label="Default select example" @bind="@_model.Group">
-                            <option selected>Choose group</option>
+                            <option selected disabled>Choose group</option>
+                            <option value=""></option>
                             @foreach (var group in _repositoryService.RoleGroupManager.GetAllGroup())
                             {
                                 <option value="@group.Name">@group.Name</option>
                             }
                         </select>
+                        <ValidationMessage For="@(() => _model.Group)" />
                     </div>
                     <button type="submit" class="btn btn-primary" id="test">Create</button>
                 </EditForm>
@@ -71,8 +74,6 @@
 
         _user.SecurityStamp = Guid.NewGuid().ToString();
         _user.Created = DateTime.Now.ToString();
-        //_user.PasswordHash = Hasher.CalculateHash(_model.Password, _model.Username);
-        //_user.RoleHash = Hasher.CalculateHash(_model.Group, _model.Username);
 
         var result = await _userManager.CreateAsync(_user, _model.Password);
 
