--- a/src/security/src/axopen_security_blazod/Views/UserManagementView.razor
+++ b/src/security/src/axopen_security_blazod/Views/UserManagementView.razor
@@ -72,18 +72,20 @@
                 <div class="form-check form-switch">
                     <InputCheckbox @bind-Value="_model.CanUserChangePassword" class="form-check-input" type="checkbox" id="checkBoxCanUserChangePassword" />
                     <label class="form-check-label" for="checkBoxCanUserChangePassword">Can User Change Password</label>
+                    <ValidationMessage For="@(() => _model.CanUserChangePassword)" />
                 </div>
 
                 <div class="form-group">
                     <label>Group</label>
                     <select class="form-select" aria-label="Default select example" @bind="@_model.Group">
-                        <option selected>Choose group</option>
+                        <option selected disabled>Choose group</option>
+                        <option value=""></option>
                         @foreach (var group in _repositoryService.RoleGroupManager.GetAllGroup())
                         {
                             <option value="@group.Name">@group.Name</option>
                         }
-
                     </select>
+                    <ValidationMessage For="@(() => _model.Group)" />
                 </div>
                 <div>
                     <button type="submit" class="btn btn-primary m-2">Update</button>
