wip on security documentation

--- a/src/security/src/axopen_security_blazod/Views/LoginDisplay.razor
+++ b/src/security/src/axopen_security_blazod/Views/LoginDisplay.razor
@@ -1,4 +1,5 @@
-﻿<nav class="navbar navbar-expand-lg">
+﻿@namespace AxOpen.Security.Views
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <AuthorizeView>
