--- a/src/security/integrations/axopen_blazor_auth_app/Shared/MainLayout.razor
+++ b/src/security/integrations/axopen_blazor_auth_app/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
 
     <main>
         <div class="top-row px-4 auth">
-            <axopen_security_blazor.Views.LoginDisplay />
+            <AxOpen.Security.Views.LoginDisplay/>
         </div>
 
         <article class="content px-4">
