--- a/src/security/integrations/axopen_blazor_auth_app/Shared/NavMenu.razor
+++ b/src/security/integrations/axopen_blazor_auth_app/Shared/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Security
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="example" Match="NavLinkMatch.All">
+                <span class="oi oi-plus" aria-hidden="true"></span> Example
+            </NavLink>
+        </div>
     </nav>
 </div>
 
