wip on sec docs

--- a/src/Security/integrations/axopen_blazor_auth_app/Pages/Example.razor
+++ b/src/Security/integrations/axopen_blazor_auth_app/Pages/Example.razor
@@ -2,7 +2,7 @@
 
 @using AxOpen.Security.Services;
 @inject IRepositoryService _repositoryService
-
+@inject AuthenticationStateProvider _asp
 <h3>Example</h3>
 
 <div class="container-fluid">
@@ -12,6 +12,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h4>You have role Administrator.</h4>
+                        <h4>Your name is: @context.User.Identity.Name</h4>
                     </div>
                 </div>
             </Authorized>
@@ -24,7 +25,7 @@
             </NotAuthorized>
         </AuthorizeView>
 
-        <AuthorizeView Roles="@_repositoryService.RoleGroupManager.GetRolesFromGroupString("AdminGroup")">
+        <AuthorizeView Roles="@_repositoryService.RoleGroupManager.GetRoles("AdminGroup")">
             <Authorized>
                 <div class="card">
                     <div class="card-body">
@@ -59,3 +60,15 @@
         </AuthorizeView>
     </div>
 </div>
+
+
+@code
+{
+    public string Test { get; set; } = "cau";
+    protected override async Task OnInitializedAsync()
+    {
+        var context = await _asp.GetAuthenticationStateAsync();
+        var isAuth = context.User.Identity.IsAuthenticated;
+
+    }
+}
