--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/DocuExamples.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/DocuExamples.razor
@@ -29,5 +29,10 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> AxoMessagingStaticDocu
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="DocuExamples/AxoDataFragmetsDocuExamples">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoDataFragmetsDocuExamples
+            </NavLink>
+        </div>
     </nav>
 </div>
