--- a/src/security/src/axopen_security_blazod/Views/UserCreateDetailView.razor
+++ b/src/security/src/axopen_security_blazod/Views/UserCreateDetailView.razor
@@ -37,16 +37,16 @@
                         <InputText @bind-Value="_model.Email" type="email" class="form-control" />
                         <ValidationMessage For="@(() => _model.Email)" />
                     </div>
-                    <div class="form-check form-switch">
+                    <div class="form-check form-switch mt-2 mb-2">
+                        <label class="form-check-label" for="checkBoxCanUserChangePassword">Can user change password</label>
                         <InputCheckbox @bind-Value="_model.CanUserChangePassword" class="form-check-input" id="checkBoxCanUserChangePassword" />
-                        <label class="form-check-label" for="checkBoxCanUserChangePassword">CanUserChangePassword</label>
+                        
                         <ValidationMessage For="@(() => _model.CanUserChangePassword)" />
                     </div>
                     <div class="form-group">
                         <label>Group</label>
-                        <select class="form-select" aria-label="Default select example" @bind="@_model.Group">
+                        <select class="form-select" aria-label="Default select example" @bind="@_model.Group" >
                             <option selected disabled>Choose group</option>
-                            <option value=""></option>
                             @foreach (var group in _repositoryService.RoleGroupManager.GetAllGroup())
                             {
                                 <option value="@group.Name">@group.Name</option>
