--- a/src/core/src/AXOpen.Core.Blazor/AxoMomentaryTask/AxoMomentaryTaskView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoMomentaryTask/AxoMomentaryTaskView.razor
@@ -5,7 +5,7 @@
 
 <div class="d-flex align-end me-2 mt-2 mb-2">
     <div class="btn-group">
-        <button class="btn btn-primary" type="button" disabled="@IsDisabled" @onmousedown="@SwitchOnTask" @onmouseup="@SwitchOffTask" >
+        <button class="btn btn-primary" type="button" disabled="@IsDisabled" @onmousedown="@SwitchOnTask" @onmouseup="@SwitchOffTask" @onfocusout="@SwitchOffTask">
             <span>@Description:@StateDescription</span>
         </button>
     </div>
