--- a/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
@@ -17,7 +17,7 @@
 }
 *@
 
-<RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData.DataManger" Presentation="Command"></RenderableContentControl>
+<RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData" Presentation="Command"></RenderableContentControl>
 
 @*<RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData.Shared" Presentation="Command"></RenderableContentControl>
 
