refactors security + all to .net7

--- a/src/templates.simple/axosimple.app/Shared/TopRow.razor
+++ b/src/templates.simple/axosimple.app/Shared/TopRow.razor
@@ -7,6 +7,6 @@
         <IAmHereIndicator />
     </div>
     <div class="ms-auto">
-        <LoginDisplay />
+        <AxOpen.Security.Views.LoginDisplay/>
     </div>
 </div>
