--- a/src/templates.simple/axosimple.app/Shared/NavMenu.razor
+++ b/src/templates.simple/axosimple.app/Shared/NavMenu.razor
@@ -10,6 +10,7 @@
                 <MenuItem Name="Controlled unit example" Link="/ui/ManipulatorExample" Icon="oi oi-cog" />
                 <MenuItem Name="I/O" Link="/ui/io" Icon="oi oi-cog" />
                 <MenuItem Name="Process data settings" Link="ui/ProcessData" Icon="oi oi-cog"></MenuItem>
+                <MenuItem Name="User administration" Link="/Security/UserAdministration"></MenuItem>
             </ExpandableMenuItem>
         </nav>
     </div>
