--- a/src/security/src/AXOpen.Security.Blazor/Views/LoginDisplay.razor
+++ b/src/security/src/AXOpen.Security.Blazor/Views/LoginDisplay.razor
@@ -1,4 +1,7 @@
-﻿@namespace AxOpen.Security.Views
+﻿@using Microsoft.AspNetCore.Mvc
+@using AxOpen.Security.Entities
+@attribute [IgnoreAntiforgeryToken]
+@namespace AxOpen.Security.Views
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -15,9 +18,13 @@
                             <li><a class="dropdown-item" href="Identity/Account/Manage" style="margin-left: 0;">Profile</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li>
-                                <form class="form-inline" asp-area="Identity" action="Identity/Account/Logout" asp-route-returnUrl="/" method="post">
-                                    <button class="dropdown-item" type="submit">Log out</button>
+                               <form class="form-inline" asp-area="Identity" action="Identity/Account/Logout" asp-route-returnUrl="/" method="post">
+                                    <button class="dropdown-item" type="submit">Log out</button>                                    
                                 </form>
+                                
+
+                              @* <button class="dropdown-item" @onclick="LogOut">Log out</button>*@
+                                
                             </li>
                         </ul>
                     </li>
@@ -29,3 +36,15 @@
         </ul>
     </div>
 </nav>
+
+
+@code
+{
+    [Inject]
+    private SignInManager<User> SignInManager { get; set; }
+
+    private async Task LogOut()
+    {
+        await SignInManager.SignOutAsync();
+    }
+}
