Adds user information to the logging - security split in two different assemblies (blazor, clr) - adds information about user perfoming actions. - removers user info from the app object (must be provided as argument of log function) - adds logging from AxoTask and AxoToggle task - context logger now creates a log entry when an message/alarm occurs - in controller loggers we will need to address the objects identity

--- a/src/templates.simple/axosimple.app/Components/UnitsSequences.razor
+++ b/src/templates.simple/axosimple.app/Components/UnitsSequences.razor
@@ -10,7 +10,15 @@
         @foreach (var task in this.Component.GetChildren().OfType<AxoTask>())
         {
             <div class="col-auto">
-                <AxoTaskCommandView Component="@task"/>
+                <AuthorizeView Roles="can_run_automat_mode">
+                    <Authorized>
+                        <AxoTaskCommandView Component="@task" />
+                    </Authorized>
+                    <NotAuthorized>
+                        <AxoTaskStatusView Component="@task" />
+                    </NotAuthorized>
+                </AuthorizeView>
+                
             </div>
         }
     </div>
