--- a/src/core/src/AXOpen.Core.Blazor/AxoMessenger/Static/AxoMessengerView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoMessenger/Static/AxoMessengerView.razor
@@ -1,8 +1,8 @@
 ﻿@namespace AXOpen.Messaging.Static
 @using AXSharp.Connector;
+@using Microsoft.AspNetCore.Components.Authorization
 @inherits RenderableComplexComponentBase<AxoMessenger>
 @implements IDisposable;
-
 
 <div class="d-flex align-end me-2 mt-2 mb-2">
     <div class="btn-group">
@@ -22,7 +22,5 @@
         <button class="btn @AckBtnBackgroundColor" type="button" @onclick="@AcknowledgeTask" hidden="@HideAckowledgeButton">
             <span class="oi oi-x" aria-hidden="true" />
         </button>
-
-
     </div>
 </div>
