--- a/src/core/src/AXOpen.Core.Blazor/AxoTask/AxoTaskView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoTask/AxoTaskView.razor
@@ -1,5 +1,6 @@
 ﻿@namespace AXOpen.Core
 @using AXSharp.Connector;
+@using Microsoft.AspNetCore.Components.Authorization
 @inherits RenderableComplexComponentBase<AxoTask>
 @implements IDisposable;
 
